--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.7.4",
     "firebase": "^7.0.0",
     "moment": "^2.24.0",
     "react": "^16.10.0",
